# operators

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  conanfile.py  taocpp-operators.cmake
.conan/: build.py
.conan/test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
doc/: reference.md
include/: addable_left.hpp  andable_left.hpp  bitwise.hpp  commutative_andable.hpp  commutative_bitwise.hpp  commutative_multipliable.hpp  commutative_ring.hpp  dividable.hpp  equivalent.hpp  modable_left.hpp  multipliable.hpp  operators.hpp  orable_left.hpp  ordered_field.hpp  ordered_ring.hpp  partially_ordered.hpp  right_shiftable.hpp  shiftable.hpp  totally_ordered.hpp  unit_steppable.hpp  xorable.hpp  xorable_left.hpp
include/df/: addable.hpp  addable_left.hpp  andable.hpp  andable_left.hpp  bitwise.hpp  bitwise_left.hpp  commutative_addable.hpp  commutative_andable.hpp  commutative_multipliable.hpp  commutative_orable.hpp  commutative_xorable.hpp  decrementable.hpp  dividable.hpp  dividable_left.hpp  equality_comparable.hpp  equivalent.hpp  field.hpp  incrementable.hpp  left_shiftable.hpp  less_than_comparable.hpp  modable.hpp  modable_left.hpp  multipliable.hpp  multipliable_left.hpp  operators.hpp  orable.hpp  orable_left.hpp  ordered_commutative_ring.hpp  ordered_ring.hpp  partially_ordered.hpp  right_shiftable.hpp  ring.hpp  subtractable.hpp  subtractable_left.hpp  totally_ordered.hpp  xorable.hpp  xorable_left.hpp
include/df/operators/: andable.hpp  bitwise_left.hpp  commutative_bitwise.hpp  commutative_orable.hpp  commutative_ring.hpp  dividable_left.hpp  field.hpp  incrementable.hpp  left_shiftable.hpp  orable.hpp  orable_left.hpp  ordered_field.hpp  partially_ordered.hpp  shiftable.hpp  subtractable_left.hpp  unit_steppable.hpp  xorable.hpp  xorable_left.hpp
include/tao/: operators.hpp
include/tao/op/: operators.hpp
src/test/: no_rvalue_reference_results.cpp  operators.cpp
src/test/operators/: CMakeLists.txt  no_rvalue_reference_results.cpp  operators.cpp  test_operators.cpp
